2008-02-26  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am (check): Validate PolicyKit policy files.

==================== 2.21.92 ====================

2008-02-20  Matthias Clasen  <mclasen@redhat.com>

	* clock-location-tile.c: Try harder to avoid resizing
	the popup. 

	* clock.c: Refresh the tiles when the timezone changes.

2008-02-20  Matthias Clasen  <mclasen@redhat.com>

	* clock-location.c (clock_location_get_offset): Take daylight
	savings time into account.

2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	Set timezones asynchronously. This keeps the clock ticking
	while the auth dialog is up.

	* set-timezone.[hc]: Replace the synchronous set_timezone call
	by an asynchronous version, reusing the async machinery for the
	set_time call.

	* clock-location.[hc]: Do the same for the 
	clock_location_make_current call.
	
	* clock-location-tile.c: Use async call to set the timezone.

2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	Fix the display of the weather on the panel.

	* clock.c: Fix some memory management issues wrt. to 
	ClockData.locations, and connect to the weather-updated
	signal on the ClockLocation instead of the ClockLocationTile.

	* clock-location-tile.[ch]: Get rid of the weather-updated
	signal that is no longer used.

2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Make all of the nested pref dialogs use the dialog
	window class, to avoid some focus and stacking order oddities with
	metacity.
	
2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	Fix the time display in the location tiles to be the time at the 
	location (currently, all tiles show the local time, which is rather 
	pointless). Also fix the problem where the time is invisible for
	a while after the popup has been shown.

	This introduces some new strings (the strftime formats used for 
	formatting the time for the tiles), but there should be little
	need to translate them.

	* clock-location-tile.[hc]: Replace the need-formatted-time signal