@@ -1,3 +1,9 @@
+2008-02-28  Vincent Untz  <vuntz@gnome.org>
+
+	* clock.c: (clock_migrate_to_26): don't set the format key if we're
+	reaching this without really migrating from 2.6 but because the value
+	is just non-sense. Fix a crash, bug #518963.
+
 2008-02-26  Matthias Clasen  <mclasen@redhat.com>
 
 	* Makefile.am (check): Validate PolicyKit policy files.
